Moved AJAX call to IGN to separate .js file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,11 @@ nav .brand-logo {
 	width: 130px;
 	text-align: center;
 }
+
+#topCardHome {
+	display: block;
+}
+
+#topCardSearch {
+	display: none;
+}
