--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,11 @@ nav .brand-logo {
 	text-align: center;
 }
 
+.gameBtn, .formBtn {
+	margin-right: 3px;
+	margin-bottom: 3px;
+}
+
 #buttonList {
 	display: none;
 }
@@ -64,4 +69,8 @@ nav .brand-logo {
 }
 
 
-
+@media (max-width: 425px) {
+	#gameName {
+		width: 100%;
+	}
+}
