Adjusted Reddit API and adjusted chat to assume account name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,10 @@ nav .brand-logo {
 	text-align: center;
 }
 
+#reddit {
+	min-height: 108px;
+}
+
 #twitch-row {
 	overflow-y: auto;
 	max-height: 300px;
