--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,7 @@ html {
 }
 
 body {
-	background-image: url("dark-triangles");
-	/*background-color: #dddddd;*/
+	background-color: #dddddd;
 	font-family: 'Montserrat', sans-serif;
 }
 
