Changed background to Playstation tile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,8 @@ html {
 }
 
 body {
-	background-color: #dddddd;
+/*	background-color: #dddddd;*/
+	background-image: url("../images/playstation-pattern.png");
 	font-family: 'Montserrat', sans-serif;
 }
 
